<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.rapha.sundaybaking.util.StringUtil" />
        <variable
            name="step"
            type="com.example.rapha.sundaybaking.data.models.InstructionStep" />

        <variable
            name="isDataConnectionAvailable"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player_view"
            viewVisibility='@{step == null || step.videoURL.isEmpty() || !safeUnbox(isDataConnectionAvailable) ? false : true}'
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/thumbnail_iv"
            viewVisibility='@{step == null || step.thumbnailURL.isEmpty() || !safeUnbox(isDataConnectionAvailable) || !StringUtil.urlContainsImageSource(step.thumbnailURL) ? false : true}'
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/picture_of_recipe_cd"
            app:imageUrl="@{step.thumbnailURL}"
            app:placeholder="@{@drawable/ic_muffin_placeholder}"
            tools:src="@drawable/placeholder" />

        <LinearLayout
            viewVisibility='@{step == null || (step.videoURL.isEmpty() &amp;&amp; (step.thumbnailURL.isEmpty() || !StringUtil.urlContainsImageSource(step.thumbnailURL))) || !safeUnbox(isDataConnectionAvailable) ? true : false}'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/no_video_placeholder_iv"
                android:layout_width="@dimen/player_placeholder_size"
                android:layout_height="@dimen/player_placeholder_size"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/video_placeholder_cd"
                android:background="@drawable/ic_muffin" />

            <TextView
                viewVisibility="@{safeUnbox(isDataConnectionAvailable) ? true : false}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_video_available"
                android:textSize="@dimen/player_placeholder_text_size"
                android:id="@+id/no_media_available_tv"
                android:textStyle="bold" />

            <TextView
                viewVisibility="@{safeUnbox(isDataConnectionAvailable) ? false : true}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_data_connection"
                android:textSize="@dimen/player_placeholder_text_size"
                android:id="@+id/no_connection_tv"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>
</layout>
