<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="recipes"
            type="java.util.List" />
    </data>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/recipes_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/recipes_included_rv"
                layout="@layout/recipes_rv_layout" />

            <TextView
                android:id="@+id/no_recipes_available_tv"
                viewVisibility="@{recipes.size() == 0 ? true : false}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/recipes_padding"
                android:text="@string/no_recipes_available_message"
                android:textSize="@dimen/heading_text_size" />

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</layout>